# paciente-nm-api

./: Makefile  README.md
database/: crud.py  models.py  schemas.py
paciente_api/: Dockerfile  exceptions.py  pyproject.toml  requirements.txt
paciente_api/api/: api.py  app.py  crud.py  database.py  main.py  models.py  schemas.py
paciente_api/tests/: fixtures.py  test_api.py
prontuario_classify/: README.md  pyproject.toml
prontuario_classify/prontuario_classify/: classify.py
prontuario_classify/tests/: test_prontuario_classify.py
rabbitmq/: Dockerfile  README.md  consumer.py  publisher.py
