[tool.poetry]
name = "prontuario_classify"
version = "0.1.0"
description = ""
authors = ["Arthur Antunes <arthur.antunes.aa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.27.3"
torch = "^2.0.0"
pydantic = "^1.10.7"
pika = "^1.3.1"
SQLAlchemy = "^2.0.7"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
